Added more pages including filling out homepage and adjusting links

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,14 +1,13 @@
 </main>
 <footer role="main">
   <section class="wrapper wrapper--short">
-    <small class="type__align--center color__type--base-25">© Airsurety 2016</small>
+    <small class="type__align--center color__type--base-25">© Airsurety {{ site.time | date: '%Y' }}</small>
     <nav role="secondary" class="type__align--center">
       <a href="{{ site.baseurl }}/about">About Us</a>
-      <a>Corporate</a>
-      <a>Broker</a>
+      <a href="{{ site.baseurl }}/signup">Corporate & Broker Sign-Up</a>
       <a>Master Policies</a>
       <a>Claim</a>
-      <a>FAQs</a>
+      <a href="{{ site.baseurl}}/faqs">FAQs</a>
       <a>Contact</a>
     </nav>
   </section>
