--- a/src/_layouts/page.html
+++ b/src/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header class="page__header color__bg--gradient color__type--white">
-  <section class="wrapper">
+  <section class="wrapper wrapper--short">
     <h1>{{ page.title }}</h1>
   </section>
 </header>
