--- a/src/assets/css/pasta/ingredients/_eggs-base.scss
+++ b/src/assets/css/pasta/ingredients/_eggs-base.scss
@@ -230,7 +230,7 @@ label h5 { @include type-xxs; }
 
 .color__bg--gradient {
   background-color: $color-highlight;
-  background-image: linear-gradient(to bottom, $color-highlight, rgba(#00CBFD,0.625));
+  background-image: linear-gradient(to bottom, $color-highlight, rgba($color-highlight-alt,0.625));
   border-color: $color-highlight;
 }
 
@@ -296,13 +296,13 @@ label h5 { @include type-xxs; }
   @include padding(xs);
   @include type-s;
   border: $border-s $color-highlight;
-  background-color: $color-highlight;
-  background-image: linear-gradient(to bottom, rgba($color-highlight,0), $color-highlight-dark);
+  background-color: $color-highlight-alt;
+  background-image: linear-gradient(to bottom, rgba($color-highlight,0), $color-highlight);
   color: $color-tint;
   border-radius: $space-xs;
   box-shadow: 0 rem(8) rem(16) rem(-8) rgba($color-shade,0.5);
   &:hover {
-    background-color: $color-highlight-dark;
+    background-color: $color-highlight;
     box-shadow: 0 rem(4) rem(8) rem(-4) rgba($color-shade,0.75);
   }
   + .btn { @include margin(s,l); }
