--- a/src/assets/css/pasta/ingredients/_flour-variables.scss
+++ b/src/assets/css/pasta/ingredients/_flour-variables.scss
@@ -31,6 +31,7 @@ $color-shade: black !default;
 }
 
 $color-highlight: #E73C4E !default;
+$color-highlight-alt: #00CBFD !default;
 $color-base: shade($color-highlight,62%) !default;
 
 $color-highlight-75: tint($color-highlight,25%);
