Adjusted links in Header and Footer

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -4,11 +4,11 @@
     <small class="type__align--center color__type--base-25">© Airsurety {{ site.time | date: '%Y' }}</small>
     <nav role="secondary" class="type__align--center">
       <a href="{{ site.baseurl }}/about">About Us</a>
-      <a href="{{ site.baseurl }}/signup">Corporate & Broker Sign-Up</a>
+      <a href="{{ site.baseurl }}/corporate">Corporate & Broker Sign-Up</a>
       <a>Master Policies</a>
       <a>Claim</a>
-      <a href="{{ site.baseurl}}/faqs">FAQs</a>
-      <a>Contact</a>
+      <a href="{{ site.baseurl }}/faqs">FAQs</a>
+      <a href="{{ site.baseurl }}/contact">Contact</a>
     </nav>
   </section>
 </footer>
