--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -12,9 +12,9 @@
     <a href="{{ site.baseurl }}/" class="logo type__align--center color__type--white">{% include svg/logo.svg %}</a>
     <nav role="main" class="type__align--center">
       <a href="{{ site.baseurl }}/#how-it-works">How It Works</a>
-      <a>Packages</a>
-      <a>Partners</a>
-      <a>Corporate</a>
+      <a href="{{ site.baseurl }}/#packages">Packages</a>
+      <a href="{{ site.baseurl }}/#partners">Partners</a>
+      <a href="{{ site.baseurl }}/corporate">Corporate</a>
       <a>Login</a>
     </nav>
   </section>
@@ -22,7 +22,7 @@
     <section class="wrapper wrapper--fluffy type__align--center color__type--white">
       <h1>Instant coverage for airplane flights!</h1>
       <a href="{{ site.baseurl }}/buy" class="btn">Get Coverage</a>
-      <a class="btn">Learn More</a>
+      <a href="{{ site.baseurl }}/#how-it-works" class="btn">Learn More</a>
     </section>
   </section>
 </header>
@@ -31,10 +31,10 @@
   <section class="wrapper wrapper--short">
     <a href="{{ site.baseurl }}/" class="logo type__align--center type__color--base">{% include svg/logo.svg %}</a>
     <nav role="main" class="type__align--center">
-      <a>How It Works</a>
-      <a>Packages</a>
-      <a>Partners</a>
-      <a>Corporate</a>
+      <a href="{{ site.baseurl }}/#how-it-works">How It Works</a>
+      <a href="{{ site.baseurl }}/#packages">Packages</a>
+      <a href="{{ site.baseurl }}/#partners">Partners</a>
+      <a href="{{ site.baseurl }}/corporate">Corporate</a>
       <a>Login</a>
     </nav>
   </section>
