--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -220,7 +220,7 @@ nav[role="secondary"] a {
     flex-grow: 1;
     @include bp(xs) { @include margin(s); }
     @include bp(s) { @include padding(m,l); }
-    h3 + p { margin-top: 0; }
+    h3 + .team__member--title { margin-top: 0; }
     p { @include margin(xs); }
   }
 }
