Update for remaining pages

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,8 +5,8 @@
     <nav role="secondary" class="type__align--center">
       <a href="{{ site.baseurl }}/about">About Us</a>
       <a href="{{ site.baseurl }}/corporate">Corporate & Broker Sign-Up</a>
-      <a>Master Policies</a>
-      <a>Claim</a>
+      <a href="{{ site.baseurl }}/policies">Master Policies</a>
+      <a href="{{ site.baseurl }}/claims">Claims</a>
       <a href="{{ site.baseurl }}/faqs">FAQs</a>
       <a href="{{ site.baseurl }}/contact">Contact</a>
     </nav>
